Fix logo and WhatsApp preview: removed vite logo, added proper OG tags with valima.life domain

--- a/index.html
+++ b/index.html
@@ -3,20 +3,33 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Valima Invitation | Basharath & Rafath</title>
+
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://valima.life/" />
   <meta property="og:title" content="Valima Ceremony Invitation - Basharath & Rafath" />
   <meta property="og:description"
     content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 📅 7th Jan 2026" />
-  <meta property="og:image" content="/preview-image.png" />
-  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://valima.life/preview-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Valima Ceremony Invitation - Basharath & Rafath" />
 
-  <!-- WhatsApp/Social Specific -->
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Valima Ceremony Invitation - Basharath & Rafath" />
+  <meta name="twitter:description"
+    content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 📅 7th Jan 2026" />
+  <meta name="twitter:image" content="https://valima.life/preview-image.png" />
+
+  <!-- Additional Meta -->
   <meta itemprop="name" content="Valima Ceremony Invitation - Basharath & Rafath">
   <meta itemprop="description"
     content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 📅 7th Jan 2026">
-  <meta itemprop="image" content="/preview-image.png">
+  <meta itemprop="image" content="https://valima.life/preview-image.png">
 </head>
 
 <body>
