--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://valima.life/" />
   <meta property="og:title" content="Valima Ceremony Invitation - Basharath & Rafath" />
   <meta property="og:description"
-    content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 📅 7th Jan 2026" />
+    content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 7th Jan 2026" />
   <meta property="og:image" content="https://valima.life/preview-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -22,13 +22,13 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Valima Ceremony Invitation - Basharath & Rafath" />
   <meta name="twitter:description"
-    content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 📅 7th Jan 2026" />
+    content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 7th Jan 2026" />
   <meta name="twitter:image" content="https://valima.life/preview-image.png" />
 
   <!-- Additional Meta -->
   <meta itemprop="name" content="Valima Ceremony Invitation - Basharath & Rafath">
   <meta itemprop="description"
-    content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 📅 7th Jan 2026">
+    content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 7th Jan 2026">
   <meta itemprop="image" content="https://valima.life/preview-image.png">
 </head>
 
