--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <meta property="og:title" content="Valima Ceremony Invitation - Basharath & Rafath" />
   <meta property="og:description"
     content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 7th Jan 2026" />
-  <meta property="og:image" content="https://valima.life/preview-image.png" />
+  <meta property="og:image" content="https://valima.life/preview-image.jpg" />
+  <meta property="og:image:secure_url" content="https://valima.life/preview-image.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <meta property="og:image:height" content="1200" />
   <meta property="og:image:alt" content="Valima Ceremony Invitation - Basharath & Rafath" />
 
   <!-- Twitter Card -->
@@ -23,13 +25,13 @@
   <meta name="twitter:title" content="Valima Ceremony Invitation - Basharath & Rafath" />
   <meta name="twitter:description"
     content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 7th Jan 2026" />
-  <meta name="twitter:image" content="https://valima.life/preview-image.png" />
+  <meta name="twitter:image" content="https://valima.life/preview-image.jpg" />
 
   <!-- Additional Meta -->
   <meta itemprop="name" content="Valima Ceremony Invitation - Basharath & Rafath">
   <meta itemprop="description"
     content="We cordially invite you to join us in celebrating the Valima Ceremony of Mohammed Basharath Ali & Rafath Unnisa. Your presence will add to our joy! 7th Jan 2026">
-  <meta itemprop="image" content="https://valima.life/preview-image.png">
+  <meta itemprop="image" content="https://valima.life/preview-image.jpg">
 </head>
 
 <body>
